<resources>
    <string name="app_name">CheckcoutCalculator</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_cart">Cart</string>
    <string name="textview_homepage_text">Welcome!</string>
    <string name="button_homepage_text">Start Ordering</string>
    <string name="textview_menu_row_price_text">Price: %d</string>
    <string name="textview_cart_row_price_text">Price: %d</string>
    <string name="textview_cart_row_total_text">Subtotal: %d</string>
    <string name="button_menu_row_text">Add to Cart</string>
    <string name="textview_menu_row_name_text">Name</string>
    <string name="button_cart_row_add">+</string>
    <string name="button_cart_row_minus">-</string>
    <string name="button_cart_row_text">Remove</string>
    <string name="checkbox_cart_row_text">Tax</string>
    <string name="editTextNumber_cart_row">1</string>
    <string name="textview_cart_card_subtotal_text">Subtotal:</string>
    <string name="textView_cart_card_tax_text">Tax:</string>
    <string name="textView_cart_card_total_text">Total:</string>
    <string name="textInputLayout_cart_card_text">Discount(%off):</string>
    <string name="button_cart_card_text">Apply</string>
    <string name="button_menu_text">Add more to menu</string>
</resources>