<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_cart_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100sp">

        <TextView
            android:id="@+id/textview_cart_row_total"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:maxWidth="116dp"
            android:text="@string/textview_cart_row_total_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_cart_row_name"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@+id/button_cart_row_minus"
            android:elegantTextHeight="true"
            android:text="@string/textview_menu_row_name_text"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="" />


        <TextView
            android:id="@+id/textview_cart_row_price"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_cart_row_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="56dp"
            android:text="@string/textview_cart_row_price_text"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cart_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextNumber_cart_row"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/round_corner_row_button"
            android:text="@string/button_cart_row_text"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNumber_cart_row"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/button_cart_row_minus"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number"
            android:text="@string/editTextNumber_cart_row"
            android:textSize="16sp"
            android:autofillHints="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cart_row_add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/editTextNumber_cart_row"
            android:background="@drawable/round_button"
            android:text="@string/button_cart_row_minus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cart_row_minus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:text="@string/button_cart_row_add" />

        <CheckBox
            android:id="@+id/checkbox_cart_row"
            android:layout_width="59dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/button_cart_row"
            android:layout_toEndOf="@+id/textview_cart_row_total"
            android:checked="true"
            android:clickable="false"
            android:text="@string/checkbox_cart_row_text"
            android:textColor="#808080"
            android:textColorHighlight="@color/teal_700"
            android:textColorLink="@color/teal_700" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>