<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_menu_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="68sp">

        <TextView
            android:id="@+id/textview_menu_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@+id/button_menu_row"
            android:text="@string/textview_menu_row_name_text"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="" />


        <TextView
            android:id="@+id/textview_menu_row_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_menu_row_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/button_menu_row"
            android:text="@string/textview_menu_row_price_text"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_menu_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/round_corner_row_button"
            android:text="@string/button_menu_row_text"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>